@@ -1288,19 +1288,45 @@ argument_list|)
 expr_stmt|;
 block|}
 name|int
-name|eo
+name|bufferLength
 init|=
 name|buffer
 operator|.
 name|length
 argument_list|()
+decl_stmt|;
+comment|// we added the multi value char to the last buffer, ignore it
+if|if
+condition|(
+name|values
+index|[
+name|index
+index|[
+literal|0
+index|]
+operator|-
+literal|1
+index|]
+operator|.
+name|fieldType
+argument_list|()
+operator|.
+name|tokenized
+argument_list|()
+condition|)
+block|{
+name|bufferLength
+operator|--
+expr_stmt|;
+block|}
+name|int
+name|eo
+init|=
+name|bufferLength
 operator|<
 name|endOffset
 condition|?
-name|buffer
-operator|.
-name|length
-argument_list|()
+name|bufferLength
 else|:
 name|boundaryScanner
 operator|.
